--- a/views/login.ejs
+++ b/views/login.ejs
@@ -52,7 +52,7 @@
       <!-- Titre -->
       <h1>
         <img class="feuille" src="../images/feuille4.png" alt="feuille" />
-        Login
+        Connexion
         <img class="feuille" src="../images/feuille2.png" alt="feuille" />
       </h1>
 
