--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -90,7 +90,7 @@
         <label for="message">Message :</label>
         <textarea id="message" name="message" required></textarea><br />
 
-        <div class="g-recaptcha recaptcha" data-sitekey="6LdvFJIpAAAAAM-Ne9S0Ww8YemudNphsPF1SHPIY" data-action="LOGIN"></div><br />
+        <div class="g-recaptcha recaptcha captcha" data-sitekey="6LdvFJIpAAAAAM-Ne9S0Ww8YemudNphsPF1SHPIY" data-action="LOGIN"></div><br />
         <input type="submit" value="ENVOYER" />
       </form>
       <div id="response"></div>
@@ -122,7 +122,8 @@
           .then((res) => res.json())
           .then((data) => {
               console.log(data);
-              alert(data.msg);
+              //location.reload();  
+              window.location.reload();
               return data.msg;
           });
       }
