--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/home.css">
     <link rel="icon" href="../images/logo.png">
-    <title>Accueil</title>
+    <title>La Vallée de la Veude</title>
 </head>
 <body>
     <header>
