--- a/views/conditions.ejs
+++ b/views/conditions.ejs
@@ -111,19 +111,50 @@
         </p>
 
         <!-- Tarifs -->
-        <h2>Tarifs</h2>
-        <table>
+        <h2>Tarifs TTC</h2>
+        <div>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> 1 chien : 16 €</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> 2 chiens de la même famille dans le même enclos : 28 €</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> 3 chiens de la même famille dans le même enclos : 35 €</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> Chien catégorisé : 18 €</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> Chien réactif humain et/ou congénères : 18 €</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> Chien avec pathologie ou traitement : me consulter</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> Chien logé seul dans un enclos pendant les vacances scolaires ou les jours fériés : 18 €</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> Nourriture fournie par la pension : + 1 € par jour (0.50 € pour un chien de - de 15kgs)</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> Supplément chauffage : 2 €</li>
+            <li class="strong"><img class="smiley" src="../images/patte.png" alt="smiley"> Les chiennes en chaleurs ne seront acceptées qu'en basse saison avec un supplément de 2 € par jour</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> Transport visite vétérinaire : trajet 0.40 €/km + 7 € par demi-heure de temps d'attente</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> Tarif dégressif à partir du 8ème jour et/ou du 2ème chien</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> Si arrivée en fin de journée ou départ en fin de matinée, une demi-journée sera facturée</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> L'intégralité du séjour prévu devra être réglée même en cas de départ anticipé</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> Une facture vous sera transmise à chaque fin de séjour</li>
+            <li><img class="smiley" src="../images/patte.png" alt="smiley"> Les règlements s’effectuent par virements, espèces ou chèques</li>
+        </div>
+
+        <!-- <table>
             <tr>
                 <td>1 Journée et nuitée pour 1 chien</td>
-                <td class="center">16 €</td>
+                <td class="center">16 € TTC</td>
             </tr>
             <tr>
-                <td>1 Journée et nuitée pour 2 chiens de la même famille</td>
-                <td class="center">28 €</td>
+                <td>1 Journée et nuitée pour 2 chiens de la même famille dans le même enclos</td>
+                <td class="center">28 € TTC</td>
             </tr>
             <tr>
-                <td>1 Journée et nuitée pour 3 chiens de la même famille</td>
-                <td class="center">35 €</td>
+                <td>1 Journée et nuitée pour 3 chiens de la même famille dans le même enclos</td>
+                <td class="center">35 € TTC</td>
+            </tr>
+            <tr>
+                <td>1 Journée et nuitée pour 1 chien catégorisé "compliqué"</td>
+                <td class="center">18 €</td>
+            </tr>
+            <tr>
+                <td>1 Journée et nuitée pour 1 chien logé seul dans un enclos pendant les vacances scolaires</td>
+                <td class="center">18 €</td>
+            </tr>
+            <tr>
+                <td>1 Journée et nuitée pour 1 chien avec une pathologie ou avec un traitement</td>
+                <td class="center">18 €</td>
             </tr>
             <tr>
                 <td>Supplément par jour et par chien réactif humain et / ou congénère</td>
@@ -138,11 +169,11 @@
                 <td class="center">1.50 €</td>
             </tr>
             <tr>
-                <td>Repas (croquettes) par jour par chien de moins de 15 kg</td>
+                <td>Repas fournie par la pension (croquettes) par jour pour 1 chien de moins de 15 kg</td>
                 <td class="center">0.50 €</td>
             </tr>
             <tr>
-                <td>Repas (croquettes) par jour par chien de 15 kg ou plus</td>
+                <td>Repas fournie par la pension (croquettes) par jour pour 1 chien de 15 kg ou plus</td>
                 <td class="center">1 €</td>
             </tr>
             <tr>
@@ -157,13 +188,17 @@
                 <td>Supplément chauffage</td>
                 <td class="center">2 €</td>
             </tr>
-        </table>
+        </table> -->
 
-        <p>
-            Les prix sont dégressifs à partir du second chien de la même famille et/ou du 8e jour (- 1€ par jour).<br>
+        <!-- <p>
+            Les chiennes en chaleurs ne seront acceptées qu'en basse saison avec un supplément de 2 € par jour.<br>
+            Les prix sont dégressifs à partir du second chien de la même famille et/ou du 8e jour. (-1€ par jour)<br>
+            Si l'arrivée de vos compagnons s'effectue en fin de journée ou le départ s'effectue en fin de matinée,
+            une demi-journée vous sera facturée.<br>
+            L'intégralité du séjour prévu devra être réglée même en cas de départ anticipé.<br>
             Une facture vous sera transmise à chaque fin de séjour.<br>
             Les règlements s’effectuent par chèques, espèces ou virements.
-        </p>
+        </p> -->
 
         <!-- Contrat et règlement -->
         <h2>Contrat et règlement</h2>
