--- a/views/mentions.ejs
+++ b/views/mentions.ejs
@@ -79,7 +79,10 @@
 
       <!-- Hébergement -->
       <h2>Hébergement</h2>
-      <p>Le présent site est hégergé par :</p>
+      <p>Le présent site est hégergé par :<br>
+        o2switch<br>
+        63 000 CLERMONT FERRAND
+      </p>
     </main>
     <footer>
       <p class="mention">
