--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -145,3 +145,15 @@ iframe {
 .recaptcha{
   margin-left: -7%;
 }
+
+.loading {
+  color: white;
+}
+
+.success{
+  color: #94d636;
+}
+
+.error{
+  color: #ff0000;
+}
